# direct-asm

./: .gitmodules  Cargo.toml  Readme.md
linux-syscall-abi/: Cargo.toml  Readme.md
linux-syscall-abi/src/: lib.rs  x86_64.rs
minimal-rust/: Cargo.toml  Readme.md  build.sh  elf.s
minimal-rust/src/: lib.rs
src/: att.rs  lib.rs
src/x86/: mod.rs
syscall-linux-raw/: Cargo.toml  Readme.md
syscall-linux-raw/.cargo/: config.toml
syscall-linux-raw/examples/: simple.rs
syscall-linux-raw/src/: lib.rs  x86_64.rs
tests/: gnu-as.rs  hello_world.rs  nasm.rs  system_call.rs
