[package]
name = "direct-asm"
description = "A custom assembler for inline asm"
version = "0.0.1"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
dynasm-lib = { path = "dynasm-rs/lib/", optional = true }
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0.7", features = ["full"] }
rand = "0.7"

[dev-dependencies]
libc = "0.2"

[features]
default = ["dynasm"]
dynasm = ["dynasm-lib"]
