[package]
name = "syscall-linux-raw"
version = "0.0.2"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]

description = "Defines syscallN methods for performing raw Linux syscalls"
documentation = "https://docs.rs/syscall-linux-raw"
repository = "https://github.com/HeroicKatora/direct-asm"

readme = "Readme.md"
keywords = ["linux", "syscall", "directasm"]
license = "Unlicense"
edition = "2018"

[dependencies]
direct-asm = { path = "../", version = "0.0.1-alpha" }
